--- a/play.html
+++ b/play.html
@@ -76,6 +76,28 @@
         the day, and I acted on it.  Private information is practically the
         source of every large modern fortune.</p>
     </p>
-    
+    <table>
+        <tr>
+          <th>Character</th>
+          <th>Actor</th>
+          <th>Offer</th>
+        </tr>
+        <tr>
+          <td>LORD GORING</td>
+          <td>PAWAN KALYAN</td>
+          <td>900000</td>
+        </tr>
+        <tr>
+          <td>SIR ROBERT CHILTERN</td>
+          <td>MAHESH BABU</td>
+          <td>600000</td>
+        </tr>
+        <tr>
+            <td>GERALD</td>
+            <td>RANA</td>
+            <td>300000</td>
+          </tr>
+      </table>
+      <a href="C:\Users\S545520\webapps-f21-assignment-4-Msks1218\play2.html">Go to play2</a>
 </body>
 </html>
