--- a/play2.html
+++ b/play2.html
@@ -18,7 +18,7 @@
         you could have succeeded just as well.</p>
 
     </p>
-    <a href="C:\Users\S545520\webapps-f21-assignment-4-Msks1218\play.html">Back to play</a>
+    <a href="play.html">Back to play</a>
     <br>
 <a href="play.html">Go to Play html page</a></br></br>
 <img src="ideahusband.jpg" alt="An Ideal Husband" style="width: 300px;height: 300px;"><br>
